# CG

./: .gitignore
HWRayTracer/: CMakeLists.txt
HWRayTracer/src/HWRayTracer/: CMakeLists.txt  Camera.h  HWRayTracer.cpp  HWRayTracer.h  Materail.h  Object.h  Sence.cpp  Sence.h  Sphere.cpp  Sphere.h
HWRayTracer/src/common/: global.h  ppm.h  ray.h  vec3.h
graphic/Assignment0/: main  main.cpp
graphic/Assignment0/代码框架/: main.cpp
graphic/Assignment1/: main.cpp
graphic/Assignment2/: main.cpp  rasterizer.cpp
graphic/Assignment3/: Texture.hpp  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
graphic/Assignment3/Code/: main.cpp  rasterizer.cpp
graphic/Assignment3/bulid/: CMakeCache.txt  Makefile  Rasterizer  cmake_install.cmake
graphic/Assignment4/code/: main.cpp
graphic/Assignment5/Code/: Renderer.cpp  Triangle.hpp
graphic/Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Triangle.hpp  main.cpp
graphic/Assignment7/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp
graphic/cloth_simulator/src/: application.cpp  rope.cpp
graphic/homework0/src/loads/: loadOBJ.js
graphic/homework0/src/materials/: PhongMaterial.js
graphic/homework0/src/shaders/: InternalShader.js
graphic/homework0/src/shaders/phongShader/: vertex.glsl
graphic/homework2/Assignment2/homework2/: index.html
graphic/homework3/src/: engine.js
graphic/homework4/lut-gen/: Eavg_IS.cpp  Eavg_MC.cpp  Emu_IS.cpp  Emu_MC.cpp
physical/PythonApplication1/: PythonApplication1.py  PythonApplication1.pyproj  PythonApplication1.sln
(+20 files in other folders)
